FrostWire 2.6.2 build 708 - OCT/10/2022
 - removed MobileFuse adapter
 - telluride build 23
 - supports downloads of IG Reels, YT Stories and TikToks

FrostWire 2.6.1 build 706 - SEP/11/2022
 - jlibtorrent 1.2.17.0 upgrade
 - Android NDK r25b
 - jlt:boost 1.80 upgrade
 - jlt:openssl 1.1.1q upgrade
 - jlt:gradle 7.5.1 upgrade
 - libtorrent update to RC_1_2 b5873f23b40ef9054b2bd6a4db2a2d327a56d4b1
 - lt:fix wanted_done/done accounting when force-rechecking
 - lt:expose userdata via torrent_handle (back-port from 2.0)
 - lt:fix renaming of filenames that are too long for the filesystem
 - lt:made UPnP and LSD code avoid using select_reactor (to work around an issue on windows in boost.asio < 1.80)
 - lt:fixed tracker connections spinning when hostname lookups stall
 - lt:fixed error in pkg-config file generation in Jamfile
 - lt:improve backwards compatibility with loading magnet link resume files
 - lt:fix bind-to-device for tracker announces and UPnP
 - lt:rename peer_tos setting to peer_dscp
 - lt:fix bdecode support for large strings (>= 100 MB)

FrostWire 2.6.0 build 705 - SEP/09/2022
 - Telluride Video Page Search is here.
 - Faster more responsive keyword search.
 - 703: Simpler, more robust Python runtime startup
 - 703: Better handling of no search results on video url
 - 704: com.applovin:applovin-sdk:11.4.2
 - 704: com.mobilefuse.sdk:mobilefuse-adapter-applovin:1.2.5.0 (new)
 - 704: removed some unity dependencies lowering installer size by almost 3mb
 - 704: slightly faster app startup

FrostWire 2.5.0 build 701 - AUG/14/2022
 - LESS IS MORE. The FrostWire we'd like to use is here.
 - Removal of annoying Interstitial ad display logic, video ads are only shown when user wants to remove ads for 30 minutes
 - Removal of "My Files", it's impossible to maintain across so many android versions and devices with the file management quicksand on android
 - "Downloads" opens the user's favorite Android File Explorer