@@ -1,7 +1,13 @@
-FrostWire 2.6.2 build 708 - OCT/10/2022
+FrostWire 2.6.2 build 707 - OCT/10/2022
  - removed MobileFuse adapter
  - telluride build 23
  - supports downloads of IG Reels, YT Stories and TikToks
+ - com.google.re2j:re2j:1.7
+ - com.google.code.gson:gson:2.9.0
+ - androidx.exifinterface:exifinterface:1.3.4
+ - com.google.gms:google-services:4.3.14
+ - com.google.firebase:firebase-crashlytics-gradle:2.9.2
+ - androidx.annotation:annotation:1.5.0
 
 FrostWire 2.6.1 build 706 - SEP/11/2022
  - jlibtorrent 1.2.17.0 upgrade
